--- a/src/components/PostLink/PostLink.css
+++ b/src/components/PostLink/PostLink.css
@@ -5,12 +5,14 @@
   justify-content: center;
   align-items: center;
   margin: 10px;
+  min-width: 800px;
 }
 .image-wrapper {
   width: 100%;
   height: 100%;
   position: relative;
   z-index: 0;
+  cursor: pointer;
 }
 .image-overlay {
   background-color: rgba(0, 0, 0, 0.932);
